Fix updateCategoryFilterState not showing block-swatch when all category items are selected

--- a/gradebookng/tool/src/webapp/styles/gradebook-grades.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-grades.css
@@ -593,8 +593,8 @@
   position: absolute;
   right: 0;
 }
-#gradeItemsTogglePanel .off .gb-item-filter-signal,
-#gradeItemsTogglePanel .partial .gb-item-filter-signal {
+#gradeItemsTogglePanel .off > .gb-item-filter-signal,
+#gradeItemsTogglePanel .partial > .gb-item-filter-signal {
   background-color: #FFF !important;
 }
 #gradeItemsTogglePanel .gb-item-category-filter,
